--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "flowbite-react-template-vite",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@reverb-app/reverb-dashboard",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
